@@ -1,6 +1,7 @@
 <b>Version 2.5.0:</b><br/><br/>
     &#8226; Auto-complete hashtags<br/>
     &#8226; Mute by client (long press the timestamp)<br/>
+    &#8226; View pictures from twitters native client in direct messages<br/>
 <br/><br/>
 
 <b>Version 2.4.7:</b><br/><br/>
